pasc600.output
Terminals unused in grammar

   T_CASE
   T_OTHERWISE
   T_LENGTH
   T_EOF


Grammar

    0 $accept: program $end

    1 $@1: %empty

    2 $@2: %empty

    3 program: header declarations subprograms $@1 comp_statement $@2 T_DOT

    4 header: T_PROGRAM T_ID T_SEMI

    5 $@3: %empty

    6 header: T_PROGRAM T_ID $@3 error

    7 declarations: constdefs typedefs vardefs

    8 constdefs: T_CONST constant_defs T_SEMI
    9          | T_CONST constant_defs error
   10          | %empty

   11 $@4: %empty

   12 constant_defs: constant_defs T_SEMI T_ID $@4 T_EQU expression

   13 $@5: %empty

   14 $@6: %empty

   15 constant_defs: constant_defs error $@5 T_ID $@6 T_EQU expression

   16 $@7: %empty

   17 constant_defs: T_ID $@7 T_EQU expression

   18 expression: expression T_RELOP expression1
   19           | expression T_EQU expression1
   20           | expression1

   21 expression1: expression1 T_ADDOP expression2
   22            | expression1 T_OROP expression2
   23            | expression2

   24 expression2: expression2 T_MULDIVANDOP expression3
   25            | expression3

   26 expression3: T_ADDOP expression
   27            | T_NOTOP expression
   28            | variable

   29 $@8: %empty

   30 expression3: T_ID $@8 T_LPAREN expressions T_RPAREN
   31            | constant
   32            | T_LPAREN expression T_RPAREN

   33 variable: T_ID
   34         | variable T_LBRACK expressions T_RBRACK

   35 expressions: expressions T_COMMA expression
   36            | expression

   37 constant: T_ICONST
   38         | T_RCONST
   39         | T_BCONST
   40         | T_CCONST
   41         | T_SCONST

   42 typedefs: T_TYPE type_defs T_SEMI
   43         | T_TYPE type_defs error
   44         | %empty

   45 $@9: %empty

   46 type_defs: type_defs T_SEMI T_ID $@9 T_EQU type_def

   47 $@10: %empty

   48 $@11: %empty

   49 type_defs: type_defs error $@10 T_ID $@11 T_EQU type_def

   50 $@12: %empty

   51 type_defs: T_ID $@12 T_EQU type_def

   52 type_def: T_ARRAY T_LBRACK dims T_RBRACK T_OF typename

   53 $@13: %empty

   54 type_def: T_ARRAY T_LBRACK dims error $@13 T_OF typename
   55         | T_LPAREN identifiers T_RPAREN
   56         | limit T_DOTDOT limit

   57 dims: dims T_COMMA limits
   58     | limits

   59 limits: limit T_DOTDOT limit
   60       | T_ID

   61 limit: T_ADDOP T_ICONST
   62      | T_ADDOP T_ID
   63      | T_ICONST
   64      | T_CCONST
   65      | T_BCONST
   66      | T_ID

   67 typename: standard_type
   68         | T_ID

   69 standard_type: T_INTEGER
   70              | T_REAL
   71              | T_BOOLEAN
   72              | T_CHAR
   73              | T_STRING

   74 vardefs: T_VAR variable_defs T_SEMI
   75        | T_VAR variable_defs error
   76        | %empty

   77 variable_defs: variable_defs T_SEMI identifiers T_COLON typename

   78 $@14: %empty

   79 variable_defs: variable_defs error $@14 identifiers T_COLON typename
   80              | identifiers T_COLON typename

   81 identifiers: identifiers T_COMMA T_ID
   82            | T_ID

   83 subprograms: subprograms subprogram T_SEMI
   84            | subprograms subprogram error
   85            | %empty

   86 subprogram: sub_header T_SEMI T_FORWARD
   87           | sub_header error T_FORWARD
   88           | sub_header T_SEMI declarations subprograms comp_statement
   89           | sub_header error declarations subprograms comp_statement

   90 $@15: %empty

   91 sub_header: T_FUNCTION T_ID $@15 formal_parameters T_COLON typename

   92 $@16: %empty

   93 sub_header: T_PROCEDURE T_ID $@16 formal_parameters
   94           | T_FUNCTION T_ID

   95 formal_parameters: T_LPAREN parameter_list T_RPAREN
   96                  | %empty

   97 parameter_list: parameter_list T_SEMI pass identifiers T_COLON typename

   98 $@17: %empty

   99 parameter_list: parameter_list error $@17 pass identifiers T_COLON typename
  100               | pass identifiers T_COLON typename

  101 pass: T_VAR
  102     | %empty

  103 comp_statement: T_BEGIN statements T_END

  104 statements: statements T_SEMI statement
  105           | statement

  106 statement: assignment
  107          | if_statement
  108          | while_statement
  109          | for_statement
  110          | subprogram_call
  111          | io_statement
  112          | comp_statement
  113          | %empty

  114 assignment: variable T_ASSIGN expression

  115 if_statement: T_IF expression T_THEN statement if_tail

  116 if_tail: T_ELSE statement
  117        | %empty

  118 while_statement: T_WHILE expression T_DO statement

  119 $@18: %empty

  120 for_statement: T_FOR T_ID $@18 T_ASSIGN iter_space T_DO statement

  121 iter_space: expression T_TO expression
  122           | expression T_DOWNTO expression

  123 subprogram_call: T_ID

  124 $@19: %empty

  125 subprogram_call: T_ID $@19 T_LPAREN expressions T_RPAREN

  126 io_statement: T_READ T_LPAREN read_list T_RPAREN
  127             | T_WRITE T_LPAREN write_list T_RPAREN
  128             | T_WRITE T_LPAREN error T_RPAREN

  129 read_list: read_list T_COMMA read_item
  130          | read_item

  131 read_item: variable

  132 write_list: write_list T_COMMA write_item
  133           | write_item

  134 write_item: expression


Terminals, with rules where they appear

$end (0) 0
error (256) 6 9 15 43 49 54 75 79 84 87 89 99 128
T_PROGRAM (258) 4 6
T_CONST (259) 8 9
T_TYPE (260) 42 43
T_ARRAY (261) 52 54
T_OF (262) 52 54
T_VAR (263) 74 75 101
T_FORWARD (264) 86 87
T_FUNCTION (265) 91 94
T_PROCEDURE (266) 93
T_INTEGER (267) 69
T_REAL (268) 70
T_BOOLEAN (269) 71
T_CHAR (270) 72
T_STRING (271) 73
T_BEGIN (272) 103
T_END (273) 103
T_IF (274) 115
T_THEN (275) 115
T_ELSE (276) 116
T_CASE (277)
T_OTHERWISE (278)
T_WHILE (279) 118
T_DO (280) 118 120
T_FOR (281) 120
T_DOWNTO (282) 122
T_TO (283) 121
T_READ (284) 126
T_WRITE (285) 127 128
T_LENGTH (286)
T_RELOP (287) 18
T_ADDOP (288) 21 26 61 62
T_OROP (289) 22
T_MULDIVANDOP (290) 24
T_NOTOP (291) 27
T_ID (292) 4 6 12 15 17 30 33 46 49 51 60 62 66 68 81 82 91 93 94 120
    123 125
T_ICONST (293) 37 61 63
T_RCONST (294) 38
T_BCONST (295) 39 65
T_CCONST (296) 40 64
T_SCONST (297) 41
T_LPAREN (298) 30 32 55 95 125 126 127 128
T_RPAREN (299) 30 32 55 95 125 126 127 128
T_SEMI (300) 4 8 12 42 46 74 77 83 86 88 97 104
T_DOT (301) 3
T_COMMA (302) 35 57 81 129 132
T_EQU (303) 12 15 17 19 46 49 51
T_COLON (304) 77 79 80 91 97 99 100
T_LBRACK (305) 34 52 54
T_RBRACK (306) 34 52
T_ASSIGN (307) 114 120
T_DOTDOT (308) 56 59
T_EOF (309)
IFX (310)
EXP1 (311)
EXP2 (312)
EXP3 (313)


Nonterminals, with rules where they appear

$accept (59)
    on left: 0
program (60)
    on left: 3, on right: 0
$@1 (61)
    on left: 1, on right: 3
$@2 (62)
    on left: 2, on right: 3
header (63)
    on left: 4 6, on right: 3
$@3 (64)
    on left: 5, on right: 6
declarations (65)
    on left: 7, on right: 3 88 89
constdefs (66)
    on left: 8 9 10, on right: 7
constant_defs (67)
    on left: 12 15 17, on right: 8 9 12 15
$@4 (68)
    on left: 11, on right: 12
$@5 (69)
    on left: 13, on right: 15
$@6 (70)
    on left: 14, on right: 15
$@7 (71)
    on left: 16, on right: 17
expression (72)
    on left: 18 19 20, on right: 12 15 17 18 19 26 27 32 35 36 114
    115 118 121 122 134
expression1 (73)
    on left: 21 22 23, on right: 18 19 20 21 22
expression2 (74)
    on left: 24 25, on right: 21 22 23 24
expression3 (75)
    on left: 26 27 28 30 31 32, on right: 24 25
$@8 (76)
    on left: 29, on right: 30
variable (77)
    on left: 33 34, on right: 28 34 114 131
expressions (78)
    on left: 35 36, on right: 30 34 35 125
constant (79)
    on left: 37 38 39 40 41, on right: 31
typedefs (80)
    on left: 42 43 44, on right: 7
type_defs (81)
    on left: 46 49 51, on right: 42 43 46 49
$@9 (82)
    on left: 45, on right: 46
$@10 (83)
    on left: 47, on right: 49
$@11 (84)
    on left: 48, on right: 49
$@12 (85)
    on left: 50, on right: 51
type_def (86)
    on left: 52 54 55 56, on right: 46 49 51
$@13 (87)
    on left: 53, on right: 54
dims (88)
    on left: 57 58, on right: 52 54 57
limits (89)
    on left: 59 60, on right: 57 58
limit (90)
    on left: 61 62 63 64 65 66, on right: 56 59
typename (91)
    on left: 67 68, on right: 52 54 77 79 80 91 97 99 100
standard_type (92)
    on left: 69 70 71 72 73, on right: 67
vardefs (93)
    on left: 74 75 76, on right: 7
variable_defs (94)
    on left: 77 79 80, on right: 74 75 77 79
$@14 (95)
    on left: 78, on right: 79
identifiers (96)
    on left: 81 82, on right: 55 77 79 80 81 97 99 100
subprograms (97)
    on left: 83 84 85, on right: 3 83 84 88 89
subprogram (98)
    on left: 86 87 88 89, on right: 83 84
sub_header (99)
    on left: 91 93 94, on right: 86 87 88 89
$@15 (100)
    on left: 90, on right: 91
$@16 (101)
    on left: 92, on right: 93
formal_parameters (102)
    on left: 95 96, on right: 91 93
parameter_list (103)
    on left: 97 99 100, on right: 95 97 99
$@17 (104)
    on left: 98, on right: 99
pass (105)
    on left: 101 102, on right: 97 99 100
comp_statement (106)
    on left: 103, on right: 3 88 89 112
statements (107)
    on left: 104 105, on right: 103 104
statement (108)
    on left: 106 107 108 109 110 111 112 113, on right: 104 105 115
    116 118 120
assignment (109)
    on left: 114, on right: 106
if_statement (110)
    on left: 115, on right: 107
if_tail (111)
    on left: 116 117, on right: 115
while_statement (112)
    on left: 118, on right: 108
for_statement (113)
    on left: 120, on right: 109
$@18 (114)
    on left: 119, on right: 120
iter_space (115)
    on left: 121 122, on right: 120
subprogram_call (116)
    on left: 123 125, on right: 110
$@19 (117)
    on left: 124, on right: 125
io_statement (118)
    on left: 126 127 128, on right: 111
read_list (119)
    on left: 129 130, on right: 126 129
read_item (120)
    on left: 131, on right: 129 130
write_list (121)
    on left: 132 133, on right: 127 132
write_item (122)
    on left: 134, on right: 132 133


State 0

    0 $accept: . program $end

    T_PROGRAM  shift, and go to state 1

    program  go to state 2
    header   go to state 3


State 1

    4 header: T_PROGRAM . T_ID T_SEMI
    6       | T_PROGRAM . T_ID $@3 error

    T_ID  shift, and go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    3 program: header . declarations subprograms $@1 comp_statement $@2 T_DOT

    T_CONST  shift, and go to state 6

    $default  reduce using rule 10 (constdefs)

    declarations  go to state 7
    constdefs     go to state 8


State 4

    4 header: T_PROGRAM T_ID . T_SEMI
    6       | T_PROGRAM T_ID . $@3 error

    T_SEMI  shift, and go to state 9

    $default  reduce using rule 5 ($@3)

    $@3  go to state 10


State 5

    0 $accept: program $end .

    $default  accept


State 6

    8 constdefs: T_CONST . constant_defs T_SEMI
    9          | T_CONST . constant_defs error

    T_ID  shift, and go to state 11

    constant_defs  go to state 12


State 7

    3 program: header declarations . subprograms $@1 comp_statement $@2 T_DOT

    $default  reduce using rule 85 (subprograms)

    subprograms  go to state 13


State 8

    7 declarations: constdefs . typedefs vardefs

    T_TYPE  shift, and go to state 14

    $default  reduce using rule 44 (typedefs)

    typedefs  go to state 15


State 9

    4 header: T_PROGRAM T_ID T_SEMI .

    $default  reduce using rule 4 (header)


State 10

    6 header: T_PROGRAM T_ID $@3 . error

    error  shift, and go to state 16


State 11

   17 constant_defs: T_ID . $@7 T_EQU expression

    $default  reduce using rule 16 ($@7)

    $@7  go to state 17


State 12

    8 constdefs: T_CONST constant_defs . T_SEMI
    9          | T_CONST constant_defs . error
   12 constant_defs: constant_defs . T_SEMI T_ID $@4 T_EQU expression
   15              | constant_defs . error $@5 T_ID $@6 T_EQU expression

    error   shift, and go to state 18
    T_SEMI  shift, and go to state 19


State 13

    3 program: header declarations subprograms . $@1 comp_statement $@2 T_DOT
   83 subprograms: subprograms . subprogram T_SEMI
   84            | subprograms . subprogram error

    T_FUNCTION   shift, and go to state 20
    T_PROCEDURE  shift, and go to state 21

    $default  reduce using rule 1 ($@1)

    $@1         go to state 22
    subprogram  go to state 23
    sub_header  go to state 24


State 14

   42 typedefs: T_TYPE . type_defs T_SEMI
   43         | T_TYPE . type_defs error

    T_ID  shift, and go to state 25

    type_defs  go to state 26


State 15

    7 declarations: constdefs typedefs . vardefs

    T_VAR  shift, and go to state 27

    $default  reduce using rule 76 (vardefs)

    vardefs  go to state 28


State 16

    6 header: T_PROGRAM T_ID $@3 error .

    $default  reduce using rule 6 (header)


State 17

   17 constant_defs: T_ID $@7 . T_EQU expression

    T_EQU  shift, and go to state 29


State 18

    9 constdefs: T_CONST constant_defs error .
   15 constant_defs: constant_defs error . $@5 T_ID $@6 T_EQU expression

    T_ID      reduce using rule 13 ($@5)
    $default  reduce using rule 9 (constdefs)

    $@5  go to state 30


State 19
